--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 spring.session.jdbc.initialize-schema=always
 spring.session.timeout=30m
 
+spring.jpa.hibernate.ddl-auto=none
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:/db/migration
