--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
+
+jwt.secret.key=${JWT_SECRET}
