--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # Smaller pool for local testing
 spring.datasource.hikari.maximum-pool-size=10
+
+spring.flyway.enabled=false
+
+spring.jpa.hibernate.ddl-auto=create-drop
