--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,3 +6,7 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=INFO
 
 # Bigger pool to handle more traffic
 spring.datasource.hikari.maximum-pool-size=20
+
+spring.flyway.enabled=true
+
+spring.jpa.hibernate.ddl-auto=validate
