Rename username to email in JWT filter and add error handlers.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -10,3 +10,5 @@ spring.datasource.hikari.maximum-pool-size=10
 spring.flyway.enabled=false
 
 spring.jpa.hibernate.ddl-auto=create-drop
+
+logging.level.dev.smootheez.minibankapp=debug
