Migrate to Gradle Kotlin DSL and set JPA ddl-auto for prod and dev

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,7 @@ spring.datasource.hikari.maximum-pool-size=10
 
 spring.flyway.enabled=false
 
+# Use create-drop for fast development design
 spring.jpa.hibernate.ddl-auto=create-drop
 
 logging.level.dev.smootheez.minibankapp=debug
