--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -9,4 +9,5 @@ spring.datasource.hikari.maximum-pool-size=20
 
 spring.flyway.enabled=true
 
+# Use validate in production
 spring.jpa.hibernate.ddl-auto=validate
