Add commented Hibernate schema generation settings for development.

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -9,6 +9,11 @@ spring.datasource.hikari.maximum-pool-size=10
 
 spring.flyway.enabled=false
 
+# Let Hibernate generate schema DDL
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.action=create
+# spring.jpa.properties.jakarta.persistence.schema-generation.scripts.create-target=src/main/resources/db/migration/V1__init_schema.sql
+# spring.jpa.properties.jakarta.persistence.schema-generation.create-source=metadata
+
 # Use create-drop for fast development design
 spring.jpa.hibernate.ddl-auto=create-drop
 
